--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ isort = "^5.13.2"
 pysqlite3 = "^0.5.3"
 python-docx = "^1.1.2"
 pillow = "^10.4.0"
+langchain-ollama = "^0.1.1"
+langchain-experimental = "^0.0.64"
+ipykernel = "^6.29.5"
 
 
 [build-system]
