--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pillow = "^10.4.0"
 langchain-ollama = "^0.1.1"
 langchain-experimental = "^0.0.64"
 ipykernel = "^6.29.5"
+mesop = "^0.10.0"
 
 
 [build-system]
