--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ langchain-ollama = "^0.1.1"
 langchain-experimental = "^0.0.64"
 ipykernel = "^6.29.5"
 mesop = "^0.10.0"
+pandas = "^2.2.2"
 
 
 [build-system]
