--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ langchain-experimental = "^0.0.64"
 ipykernel = "^6.29.5"
 mesop = "^0.10.0"
 pandas = "^2.2.2"
+langchain-huggingface = "^0.0.3"
+langchain-nvidia-ai-endpoints = "^0.2.0"
 
 
 [build-system]
