--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,15 @@ mesop = "^0.10.0"
 pandas = "^2.2.2"
 langchain-huggingface = "^0.0.3"
 langchain-nvidia-ai-endpoints = "^0.2.0"
+text-generation = "^0.7.0"
+transformers = "^4.43.4"
+google-search-results = "^2.4.2"
+numexpr = "^2.10.1"
+langchainhub = "^0.1.20"
+sentencepiece = "^0.2.0"
+jinja2 = "^3.1.4"
+bitsandbytes = "^0.43.3"
+accelerate = "^0.33.0"
 
 
 [build-system]
